--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports: 
+    pracma,
+    rlang,
     stats
 RoxygenNote: 7.2.3
 Suggests: 
