--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,5 +19,6 @@ Imports:
 RoxygenNote: 7.2.3
 Suggests: 
     covr,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    tibble
 Config/testthat/edition: 3
