--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports: 
-    pracma,
+    distionary,
+    ggplot2,
     rlang,
     stats
 RoxygenNote: 7.2.3
@@ -22,3 +23,5 @@ Suggests:
     testthat (>= 3.0.0),
     tibble
 Config/testthat/edition: 3
+Remotes: 
+    vincenzocoia/distionary
