export scale_y_gumbelAEP

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,6 @@ export(qqpairs)
 export(rpscore)
 export(scale_x_gumbelAEP)
 export(scale_x_gumbelRP)
+export(scale_y_gumbelAEP)
 export(scale_y_gumbelRP)
 export(uscore)
